--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"server": "node server/index.js",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
+		"body-parser": "^1.18.2",
+		"express": "^4.16.2",
 		"react": "16.0.0",
 		"react-native": "0.50.4"
 	},
