--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"body-parser": "^1.18.2",
 		"express": "^4.16.2",
 		"react": "16.0.0",
-		"react-native": "0.50.4"
+		"react-native": "0.50.4",
+		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
