--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-local": "^1.0.0",
     "react": "16.0.0",
     "react-native": "0.50.4",
+    "react-native-qrcode": "^0.2.6",
     "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
