--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'resume_recruiter'
-
 include ':app'
+include ':react-native-document-picker'
+project(':react-native-document-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-document-picker/android')
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
