--- a/ios/resume_recruiter/Info.plist
+++ b/ios/resume_recruiter/Info.plist
@@ -52,5 +52,13 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+  <string>HypeRecruiter would like access to your photo gallery</string>
+  <key>NSCameraUsageDescription</key>
+  <string>HypeRecruiter would like to use your camera</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>HypeRecruiter would like to save photos to your photo gallery</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>HypeRecruiter would like to your microphone (for videos)</string>
 </dict>
 </plist>
