--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.2",
     "mongoose": "^4.13.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "querystring": "^0.2.0",
     "react": "16.0.0",
     "react-native": "0.50.4",
     "react-native-qrcode": "^0.2.6",
