pdf viewing should now fully work

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "buffer": "^5.0.8",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "crypto": "^1.0.1",
@@ -28,7 +29,9 @@
     "querystring": "^0.2.0",
     "react": "16.0.0",
     "react-native": "0.50.4",
+    "react-native-doc-viewer": "^2.6.3",
     "react-native-document-picker": "^2.1.0",
+    "react-native-fs": "^2.9.2",
     "react-native-image-picker": "^0.26.7",
     "react-native-qrcode": "^0.2.6",
     "react-navigation": "^1.0.0-beta.21",
