--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "displayName": "resume_recruiter",
   "expo": {
     "name": "resume_recruiter",
-    "slug": "resume_recruiter",
-    "sdkVersion": "23.0.6"
+    "slug": "resume-recruiter",
+    "sdkVersion": "23.0.0"
   }
 }
