--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "crypto": "^1.0.1",
-    "expo": "^23.0.6",
+    "expo": "^23.0.0",
     "express": "^4.16.2",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^4.13.5",
@@ -28,8 +28,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
-    "react": "16.0.0",
-    "react-native": "0.50.4",
+    "react": "^16.0.0-beta.5",
+    "react-native": "^0.50.3",
     "react-native-doc-viewer": "^2.6.3",
     "react-native-document-picker": "^2.1.0",
     "react-native-fs": "^2.9.2",
