--- a/ios/resume_recruiter/Info.plist
+++ b/ios/resume_recruiter/Info.plist
@@ -54,7 +54,7 @@
 				<false/>
 			</dict>
 		</dict>
-  </dict>
+	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Raleway-Black.ttf</string>
@@ -76,5 +76,13 @@
 		<string>Raleway-Thin.ttf</string>
 		<string>Raleway-ThinItalic.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Your message to user when the camera is accessed for the first time</string>
+	<!-- Include this only if you are planning to use the camera roll -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<!-- Include this only if you are planning to use the microphone for video recording -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Your message to user when the microsphone is accessed for the first time</string>
 </dict>
 </plist>
