changed icon name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "resume_recruiter",
-  "displayName": "resume_recruiter",
+  "displayName": "HyperCruiter",
   "expo": {
     "name": "resume_recruiter",
     "slug": "resume-recruiter",
